<resources>
    <string name="app_name">SonayJagnayKayAzkaar</string>
    <string name="translation_settings">Language Settings</string>
    <string name="reference_settings">Reference Settings</string>
    <string name="settings">Settings</string>
    <string name="font_settings">Font Settings</string>
    <string name="favorites">Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_duas">Favorite Duas</string>
    <string name="quranic_duas">Quranic Duas</string>
    <string name="masnoon_duas">Masnoon Duas</string>
    <string name="divider">❋ ❋  ❋</string>
    <string name="please_enable_options">Please enable options which you want to see:</string>
    <string name="eng">English</string>
    <string name="urd">Urdu</string>
    <string name="ref">References</string>
    <string name="minus">-</string>
    <string name="twenty_six">26</string>
    <string name="plus">+</string>
    <string name="remove_dua">Remove Dua</string>
    <string name="font_size">Font Size</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="text_separator">"***"</string>
    <string name="sample_counter">" 1 / 43"</string>
    <string name="sample_arabic_text">"رَبِّ زِدْنِیْ عِلْمًا"</string>
    <string name="list">></string>
    <string name="lang_opt">Select the translation you wish to see</string>
    <string name="font_opt">Step the font size up or down :)</string>
    <string name="ref_opt">Turn on the references to view the references with Duas</string>
    <string name="sduas">Duas for Sleeping</string>
     <string name="wduas">Duas for Waking Up</string>
      <string name="sduasurd">سونے کے ازکار</string>
     <string name="wduasurd">جاگنے  کے ازکار</string>
     <string name="ref_label">Reference:</string>
     <string name="delete">Delete</string>
   <string name="title">❋</string>
</resources>